Sun May 19 04:09:25 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: Fix targets, so that if configure fails, but actually
    succeeds in creating config.status(as might happen if one has a
    c-style comment in configure.in, and the shell trys running /foo), then
    the build will actually fail correctly.

Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>

  * acconfig.h: Oops.  Forgot to add #undef HAVE_GNUC25_UNUSED.

Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>

  * config.h.bot, configure.in, optlib/getopt.c: Define an UNUSED macro,
    for __attribute__((unused)).

Sun May 19 02:31:11 CDT 2002 Adam Heath <doogie@debian.org>

  * optlib/error.h, optlib/getopt.c, utils/start-stop-daemon.c: Use
    the configure detected gcc __attribute__ macros, instead of
    hard-coding them.

Thu May 16 19:09:48 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * po/da.po: New version from Claus Hindsgaul <claus_h@image.dk>

Mon May 13 22:44:48 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * man/en/dpkg.8.sgml: document --force-confmiss and --force-bad-verify

Mon May  6 16:26:51 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * lots-a-files: update email address for Ian Jackson

Sun May  5 22:27:50 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * configure.in: expand all paths before doing substitution

Sun May  5 17:42:21 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * Makefile.conf.in: use @PACKAGE@ for dpkgconfdir as well
  * man/paths.ent.in: new file
  * configure.in: generate man/paths.ent

Sun Apr 21 12:23:40 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * include/dpkg.h.in: add DIFF #define
  * main/configure.c: use it

Sun Apr 14 16:13:16 CEST 2002 Wichert Akkerman <wichert@deephackmode.org>

  * man/en/deb-old.5.sgml: DocBook version of deb-old manpage
  * man/en/cleanup-info.8.sgml: DocBook version of cleanup-info manpage