@@ -1,3 +1,10 @@
+Sun May 19 04:18:46 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * debian/rules: If automake/*.m4 is modified, rebuild aclocal.m4.  If
+    aclocal.m4 or configure.in are modified, rebuild configure.in.
+    config.h.in gets rebuilt if configure.in is modified.  And, lastly,
+    configure is rerun, if configure or config.h.in is modified.
+
 Sun May 19 04:09:25 CDT 2002 Adam Heath <doogie@debian.org>
 
   * debian/rules: Fix targets, so that if configure fails, but actually
